--- a/requirements.txt
+++ b/requirements.txt
@@ -78,11 +78,13 @@ strsimpy==0.2.1
 tenacity==8.2.3
 threadpoolctl==3.2.0
 tornado==6.3.3
+tqdm==4.66.1
 traitlets==5.9.0
 typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.4
 wcwidth==0.2.6
 Werkzeug==2.2.3
+wordcloud==1.9.2
 xarray==2023.8.0
 xlrd==2.0.1
