--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==10.0.0
 platformdirs==3.10.0
-plotly==5.16.1
+plotly==5.18.0
 prompt-toolkit==3.0.39
 psutil==5.9.5
 ptyprocess==0.7.0
@@ -88,3 +88,4 @@ Werkzeug==2.2.3
 wordcloud==1.9.2
 xarray==2023.8.0
 xlrd==2.0.1
+nbformat>=4.2.0
