--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 ansi2html==1.8.0
 asttokens==2.4.0
+attrs==23.1.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
 Brotli==1.0.9
@@ -21,18 +22,22 @@ decorator==5.1.1
 dtale==3.4.0
 et-xmlfile==1.1.0
 executing==1.2.0
+fastjsonschema==2.19.0
 Flask==2.2.5
 Flask-Compress==1.13
 flask-ngrok==0.0.25
 fonttools==4.42.1
 future==0.18.3
 idna==3.4
+install==1.3.5
 ipykernel==6.25.2
 ipython==8.15.0
 itsdangerous==2.1.2
 jedi==0.19.0
 Jinja2==3.1.2
 joblib==1.3.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
 jupyter_client==8.3.1
 jupyter_core==5.3.1
 kaleido==0.2.1
@@ -42,6 +47,7 @@ MarkupSafe==2.1.3
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
 missingno==0.5.2
+nbformat==5.9.2
 nest-asyncio==1.5.7
 networkx==3.1
 numpy==1.25.2
@@ -64,8 +70,10 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3.post1
 pyzmq==25.1.1
+referencing==0.32.0
 requests==2.31.0
 retrying==1.3.4
+rpds-py==0.13.2
 scikit-learn==1.3.0
 scipy==1.11.2
 seaborn==0.12.2
@@ -88,4 +96,3 @@ Werkzeug==2.2.3
 wordcloud==1.9.2
 xarray==2023.8.0
 xlrd==2.0.1
-nbformat>=4.2.0
